Mon Apr 04 13:58:45 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Update release date.

Mon Mar 28 12:02:56 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: 1.2.5.

Sat Mar 26 14:50:41 GMT 2011  Olly Betts <olly@survex.com>

	* INSTALL: Fix typo in recent commit.

Sat Mar 26 14:44:53 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Fix m4 quoting so that the release series check works.

Sat Mar 26 14:34:10 GMT 2011  Olly Betts <olly@survex.com>

	* INSTALL: Copy new Multi-Arch section from xapian-core/INSTALL.
	  Replace VPATH section with better equivalent from
	  xapian-core/INSTALL.

Sat Mar 26 14:29:32 GMT 2011  Olly Betts <olly@survex.com>

	* ruby/smoketest.rb: Test Xapian::Compactor.

Sun Mar 20 10:53:32 GMT 2011  Olly Betts <olly@survex.com>

	* python/smoketest2.py: Remove two print statements left over from
	  debugging.

Fri Mar 18 13:46:05 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Don't override MACOSX_DEPLOYMENT_TARGET on 10.5 and
	  later, or 10.4 on x86 as the default if unset on these platforms
	  is the current OS version.

Fri Mar 18 11:33:26 GMT 2011  Olly Betts <olly@survex.com>

	* csharp/Makefile.am: Second part of ticket#516 fix.

Fri Mar 18 05:29:01 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Don't pass extra flags to Microsoft's gacutil.
	  (ticket#516)

Wed Mar 16 05:29:31 GMT 2011  Olly Betts <olly@survex.com>

	* python/smoketest2.py: Add test coverage for min_wt argument of
	  get_eset().

Wed Mar 16 05:13:42 GMT 2011  Olly Betts <olly@survex.com>

	* python/smoketest2.py: Fix comment typo.

Wed Mar 16 03:33:13 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Handle an empty response to $RUBY --version specially.
	  This gives a less opaque error in cases where the user specified
	  RUBY but the value given wasn't an executable file.

Tue Mar 15 23:09:04 GMT 2011  Dan Colish <dcolish@gmail.com>

	* xapian.i: Expose ESet.get_eset with min_wt parameter
